# cryptosignals

./: .gitignore  CLAUDE.md  PHASE2_REPORT.md  README.md  demo_scripts.md  vercel.json
apps/web/: tsconfig.tsbuildinfo
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/model/: page.tsx
apps/web/src/app/portfolio/: PortfolioClient.tsx  page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/dashboard/: IntroBanner.tsx  SignalCard.tsx  SignalFeed.tsx  SignalsPanel.tsx
apps/web/src/components/model/: CoefficientBarChart.tsx  LivePerformancePanel.tsx  ModelCard.tsx  PipelineDiagram.tsx  VifTraceChart.tsx
apps/web/src/components/portfolio/: EquityCurve.tsx  PortfolioSummary.tsx  TradeHistoryTable.tsx
apps/web/src/components/settings/: CapitalForm.tsx  ThresholdSlider.tsx
apps/web/src/hooks/: use-portfolio.ts  use-realtime-predictions.ts  use-realtime-trades.ts
apps/web/src/lib/: format.ts
apps/worker/: .dockerignore  Dockerfile  README.md  nixpacks.toml  pyproject.toml  requirements.txt
apps/worker/worker/: config.py  features.py  inference.py  ingest.py  main.py  trading.py
apps/worker/worker/ml/: analyze.py  bootstrap_train.py  evaluate.py  metrics.py  optimize.py  persistence.py  refit.py  train.py
