[project]
name = "crypto-signals-worker"
version = "0.1.0"
description = "Background worker: polls Coinbase, computes features, runs OLS inference, simulates paper trades."
requires-python = ">=3.12,<3.13"
dependencies = [
  "supabase>=2.7.0",
  "httpx>=0.27.0",
  "tenacity>=8.5.0",
  "pandas>=2.2.0",
  "numpy>=1.26,<2.0",
  "statsmodels>=0.14.0",
  "scikit-learn>=1.5.0",
  "joblib>=1.4.0",
  "apscheduler>=3.10.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "matplotlib>=3.9",       # bootstrap training script plots
  "ipython>=8.0",
]

[tool.uv]
package = false
